--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Coder</title>
+    <title>Rangoborang</title>
     <meta charset="utf-8">
     <link href="./static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="./static/js/index.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </head>
 <body>
     <audio id="cAudio">
@@ -43,14 +44,17 @@
         <source src="./static/media/b_note.ogg" type="audio/ogg"></source>
         <source src="./static/media/b_note.wav" type="audio/wav"></source>
     </audio>
-    <div class= "instrument">
-        <div class="c box">C</div>
-        <div class="d box">D</div>
-        <div class="e box">E</div>
-        <div class="f box">F</div>
-        <div class="g box">G</div>
-        <div class="a box">A</div>
-        <div class="b box">B</div>
+    <div class="container">
+      <h1>Rangoborang</h1>
+      <div class= "instrument">
+          <div class="c box">C</div>
+          <div class="d box">D</div>
+          <div class="e box">E</div>
+          <div class="f box">F</div>
+          <div class="g box">G</div>
+          <div class="a box">A</div>
+          <div class="b box">B</div>
+      </div>
     </div>
 </body>
 </html>
