Rangoborang 2.0 - added wand + effects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <link href="./static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="./static/js/index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </head>
 <body>
@@ -45,7 +44,7 @@
         <source src="./static/media/b_note.wav" type="audio/wav"></source>
     </audio>
     <div class="container">
-      <h1>Rangoborang</h1>
+      <h1 unselectable="on">Rangoborang</h1>
       <div class= "instrument">
           <div class="c box">C</div>
           <div class="d box">D</div>
@@ -55,6 +54,8 @@
           <div class="a box">A</div>
           <div class="b box">B</div>
       </div>
+      <h5 unselectable="on">by Nathan Navidzadeh</h5>
     </div>
+    <script src="./static/js/index.js"></script>
 </body>
 </html>
